# karate-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  amplify.yml  claude.md  customHttp.yml
.github/workflows/: ci.yml  release.yml  test-installer.yml
aws-amplify/: amplify.yml  customHttp.yml  index.html  install.ps1  install.sh
docs/: spec.md  tracker.md
src/: cli.rs  config.rs  delegate.rs  download.rs  error.rs  jre.rs  main.rs  manifest.rs  platform.rs
src/commands/: config.rs  doctor.rs  jre.rs  mod.rs  plugin.rs  setup.rs  update.rs  upgrade.rs  version.rs
test/: smoke.feature
